--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -732,9 +732,6 @@
   "preferences__downloadSettingsIntro": {
     "string": "Wähle aus, wie du Audiodateien herunterladen möchtest."
   },
-  "preferences__heading": {
-    "string": "Kontoeinstellungen"
-  },
   "preferences__inputAutoplay": {
     "string": "Aufnahmen automatisch abspielen"
   },
@@ -841,9 +838,6 @@
   },
   "profile__buttonLabelSaveChanges": {
     "string": "Änderungen speichern"
-  },
-  "profile__heading": {
-    "string": "Kontoeinstellungen"
   },
   "profile__inputLabelForEmail": {
     "comment": "input label for email",
@@ -2805,5 +2799,8 @@
   },
   "presentersListAll__loading": {
     "string": "Loading..."
+  },
+  "account__heading": {
+    "string": "Account Settings"
   }
 }
