--- a/public/lang/fr.json
+++ b/public/lang/fr.json
@@ -732,9 +732,6 @@
   "preferences__downloadSettingsIntro": {
     "string": "Choisissez comment vous voulez télécharger l'audio."
   },
-  "preferences__heading": {
-    "string": "Paramètres du compte"
-  },
   "preferences__inputAutoplay": {
     "string": "Lire automatiquement les enregistrements"
   },
@@ -841,9 +838,6 @@
   },
   "profile__buttonLabelSaveChanges": {
     "string": "Sauvegarder les modifications"
-  },
-  "profile__heading": {
-    "string": "Paramètres du compte"
   },
   "profile__inputLabelForEmail": {
     "comment": "input label for email",
@@ -2805,5 +2799,8 @@
   },
   "presentersListAll__loading": {
     "string": "Loading..."
+  },
+  "account__heading": {
+    "string": "Account Settings"
   }
 }
