--- a/public/lang/es.json
+++ b/public/lang/es.json
@@ -732,9 +732,6 @@
   "preferences__downloadSettingsIntro": {
     "string": "Elija cómo quiere descargar el audio."
   },
-  "preferences__heading": {
-    "string": "Configuración de la cuenta"
-  },
   "preferences__inputAutoplay": {
     "string": "Grabaciones de reproducción automática"
   },
@@ -841,9 +838,6 @@
   },
   "profile__buttonLabelSaveChanges": {
     "string": "Guardar cambios"
-  },
-  "profile__heading": {
-    "string": "Configuración de la cuenta"
   },
   "profile__inputLabelForEmail": {
     "comment": "etiqueta de entrada para correo electrónico",
@@ -2805,5 +2799,8 @@
   },
   "presentersListAll__loading": {
     "string": "Loading..."
+  },
+  "account__heading": {
+    "string": "Account Settings"
   }
 }
