--- a/public/lang/ja.json
+++ b/public/lang/ja.json
@@ -732,9 +732,6 @@
   "preferences__downloadSettingsIntro": {
     "string": "オーディオファイルのダウンロード方法の好みを設定。"
   },
-  "preferences__heading": {
-    "string": "アカウントの設定"
-  },
   "preferences__inputAutoplay": {
     "string": "自動再生開始する"
   },
@@ -841,9 +838,6 @@
   },
   "profile__buttonLabelSaveChanges": {
     "string": "編集したものを保存"
-  },
-  "profile__heading": {
-    "string": "アカウントの設定"
   },
   "profile__inputLabelForEmail": {
     "comment": "input label for email",
@@ -2805,5 +2799,8 @@
   },
   "presentersListAll__loading": {
     "string": "Loading..."
+  },
+  "account__heading": {
+    "string": "Account Settings"
   }
 }
