--- a/public/lang/zh.json
+++ b/public/lang/zh.json
@@ -732,9 +732,6 @@
   "preferences__downloadSettingsIntro": {
     "string": "选择您想下载音频的方式。"
   },
-  "preferences__heading": {
-    "string": "账户设置"
-  },
   "preferences__inputAutoplay": {
     "string": "自动播放录音"
   },
@@ -841,9 +838,6 @@
   },
   "profile__buttonLabelSaveChanges": {
     "string": "保存更改"
-  },
-  "profile__heading": {
-    "string": "账户设置"
   },
   "profile__inputLabelForEmail": {
     "comment": "input label for email",
@@ -2805,5 +2799,8 @@
   },
   "presentersListAll__loading": {
     "string": "Loading..."
+  },
+  "account__heading": {
+    "string": "Account Settings"
   }
 }
