--- a/public/lang/br.json
+++ b/public/lang/br.json
@@ -2801,6 +2801,6 @@
     "string": "Loading..."
   },
   "account__heading": {
-    "string": "Account Settings"
+    "string": "Configurações da conta"
   }
 }
