--- a/public/lang/es.json
+++ b/public/lang/es.json
@@ -2801,6 +2801,6 @@
     "string": "Loading..."
   },
   "account__heading": {
-    "string": "Account Settings"
+    "string": "Configuración de la cuenta"
   }
 }
