--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -2796,5 +2796,8 @@
   },
   "done": {
     "string": "Fertig"
+  },
+  "header__navItemMore-sharingtools": {
+    "string": "Sharing Tools"
   }
 }
