--- a/public/lang/fr.json
+++ b/public/lang/fr.json
@@ -2796,5 +2796,8 @@
   },
   "done": {
     "string": "Terminé"
+  },
+  "header__navItemMore-sharingtools": {
+    "string": "Sharing Tools"
   }
 }
