--- a/public/lang/ja.json
+++ b/public/lang/ja.json
@@ -2781,5 +2781,13 @@
   "done": {
     "string": "終了"
   },
+  "header__navItemMore-sharingtools": {
+    "string": "Sharing Tools"
+  },
+  "open_app": {
+    "string": "Open App"
+  },
+  "timeLeft": {
+    "string": "{time} left"
   }
 }
