--- a/public/lang/br.json
+++ b/public/lang/br.json
@@ -2547,9 +2547,6 @@
   "organismSection__egwAudiobooksPrevious": {
     "string": "Audio Livros EGW Anteriores"
   },
-  "organismSection_OradoresHeading": {
-    "string": "Oradores"
-  },
   "organismSection_presentersNext": {
     "string": "Proximos Oradores"
   },
@@ -2698,7 +2695,7 @@
     "string": "Destaques da Semana (enviado toda segunda-feira)"
   },
   "newsLetterForm__newsletterEmail": {
-    "string": "Email"
+    "string": "E-mail"
   },
   "newsLetterForm__newsletterEmailPlaceholder": {
     "string": "josephbates@email.com"
@@ -2789,5 +2786,8 @@
   },
   "timeLeft": {
     "string": "{time} left"
+  },
+  "organismSection_presentersHeading": {
+    "string": "Oradores"
   }
 }
