--- a/public/lang/ru.json
+++ b/public/lang/ru.json
@@ -2738,5 +2738,14 @@
   },
   "account__heading": {
     "string": "Настройки учетной записи"
+  },
+  "discover__continueListeningNext": {
+    "string": "Next continue listening"
+  },
+  "discover__continueListeningPrevious": {
+    "string": "Previous continue listening"
+  },
+  "discover_continueListeningHeading": {
+    "string": "Continue Listening"
   }
 }
