--- a/public/lang/br.json
+++ b/public/lang/br.json
@@ -2724,6 +2724,6 @@
   },
   "collectionDetail__teachingsCountLabel": {
     "comment": "Collection Detail teachings count label",
-    "string": "{count} Teachings"
+    "string": "{contagem} ensinamentos"
   }
 }
