added conference presenter recording page

--- a/public/lang/es.json
+++ b/public/lang/es.json
@@ -2735,5 +2735,8 @@
   },
   "account__heading": {
     "string": "Configuración de la cuenta"
+  },
+  "presenterDetail__conferenceRecordingsLabel": {
+    "string": "{conferenceTitle}"
   }
 }
