--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -2735,5 +2735,8 @@
   },
   "account__heading": {
     "string": "Kontoeinstellungen"
+  },
+  "presenterDetail__conferenceRecordingsLabel": {
+    "string": "{conferenceTitle}"
   }
 }
