--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -2084,6 +2084,9 @@
     "comment": "Presenter detail audiobook tracks count label",
     "string": "{count} Audiobook Tracks"
   },
+  "presenterDetail__conferenceRecordingsLabel": {
+    "string": "{conferenceTitle}"
+  },
   "presenterDetail__descriptionLabel": {
     "string": "Description"
   },
