--- a/public/lang/ja.json
+++ b/public/lang/ja.json
@@ -2735,5 +2735,8 @@
   },
   "account__heading": {
     "string": "アカウントの設定"
+  },
+  "presenterDetail__conferenceRecordingsLabel": {
+    "string": "{conferenceTitle}"
   }
 }
