--- a/public/lang/br.json
+++ b/public/lang/br.json
@@ -2725,5 +2725,12 @@
   "collectionDetail__teachingsCountLabel": {
     "comment": "Collection Detail teachings count label",
     "string": "{contagem} ensinamentos"
+  },
+  "collectionDetail__presentersAllLabel": {
+    "string": "See All Presenters"
+  },
+  "collectionDetail__presentersLabel": {
+    "comment": "Collection Detail speakers label",
+    "string": "Presenters"
   }
 }
