--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -535,6 +535,13 @@
   "collectionDetail__locationLabel": {
     "string": "Location"
   },
+  "collectionDetail__presentersAllLabel": {
+    "string": "See All Presenters"
+  },
+  "collectionDetail__presentersLabel": {
+    "comment": "Collection Detail speakers label",
+    "string": "Presenters"
+  },
   "collectionDetail__sequenceCountLabel": {
     "comment": "Collection Detail sequence count label",
     "string": "{count} Series"
