--- a/public/lang/fr.json
+++ b/public/lang/fr.json
@@ -152,19 +152,8 @@
     "comment": "Collection Detail sequence count label",
     "string": "{count} séries"
   },
-  "collectionDetail__seriesAllLabel": {
-    "string": "Voir toutes les séries"
-  },
-  "collectionDetail__seriesLabel": {
-    "comment": "Collection Detail series label",
-    "string": "Séries"
-  },
   "collectionDetail__sponsorLabel": {
     "string": "Sponsor"
-  },
-  "collectionDetail__teachingsLabel": {
-    "comment": "Collection Detail teachings label",
-    "string": "Enseignements individuels"
   },
   "collectionPresenterssDetail__heading": {
     "string": "Présentateurs"
@@ -2738,11 +2727,22 @@
     "comment": "Collection Detail teachings count label",
     "string": "{count} enseignements"
   },
-  "collectionDetail__presentersAllLabel": {
-    "string": "See All Presenters"
+  "organismSection_SeriesHeading": {
+    "string": "Series"
   },
-  "collectionDetail__presentersLabel": {
-    "comment": "Collection Detail speakers label",
-    "string": "Presenters"
+  "organismSection_SeriesNext": {
+    "string": "Next Series"
+  },
+  "organismSection_SeriesPrevious": {
+    "string": "Previous Series"
+  },
+  "organismSection_TeachingsHeading": {
+    "string": "Teachings"
+  },
+  "organismSection_TeachingsNext": {
+    "string": "Next Teachings"
+  },
+  "organismSection_TeachingsPrevious": {
+    "string": "Previous Teachings"
   }
 }
