--- a/public/lang/zh.json
+++ b/public/lang/zh.json
@@ -152,19 +152,8 @@
     "comment": "Collection Detail sequence count label",
     "string": "{count}个系列"
   },
-  "collectionDetail__seriesAllLabel": {
-    "string": "查看所有系列"
-  },
-  "collectionDetail__seriesLabel": {
-    "comment": "Collection Detail series label",
-    "string": "系列"
-  },
   "collectionDetail__sponsorLabel": {
     "string": "赞助者"
-  },
-  "collectionDetail__teachingsLabel": {
-    "comment": "Collection Detail teachings label",
-    "string": "个别证道"
   },
   "collectionPresenterssDetail__heading": {
     "string": "所有讲员"
@@ -2738,11 +2727,22 @@
     "comment": "Collection Detail teachings count label",
     "string": "{count}篇证道"
   },
-  "collectionDetail__presentersAllLabel": {
-    "string": "See All Presenters"
+  "organismSection_SeriesHeading": {
+    "string": "Series"
   },
-  "collectionDetail__presentersLabel": {
-    "comment": "Collection Detail speakers label",
-    "string": "Presenters"
+  "organismSection_SeriesNext": {
+    "string": "Next Series"
+  },
+  "organismSection_SeriesPrevious": {
+    "string": "Previous Series"
+  },
+  "organismSection_TeachingsHeading": {
+    "string": "Teachings"
+  },
+  "organismSection_TeachingsNext": {
+    "string": "Next Teachings"
+  },
+  "organismSection_TeachingsPrevious": {
+    "string": "Previous Teachings"
   }
 }
