--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -2728,7 +2728,7 @@
     "string": "{count} Lehren"
   },
   "organismSection_SeriesHeading": {
-    "string": "Series"
+    "string": "Serien"
   },
   "organismSection_SeriesNext": {
     "string": "Next Series"
@@ -2737,7 +2737,7 @@
     "string": "Previous Series"
   },
   "organismSection_TeachingsHeading": {
-    "string": "Teachings"
+    "string": "Lehren"
   },
   "organismSection_TeachingsNext": {
     "string": "Next Teachings"
