--- a/public/lang/ja.json
+++ b/public/lang/ja.json
@@ -2728,7 +2728,7 @@
     "string": "レッスン{count}個"
   },
   "organismSection_SeriesHeading": {
-    "string": "Series"
+    "string": "シリーズ"
   },
   "organismSection_SeriesNext": {
     "string": "Next Series"
@@ -2737,7 +2737,7 @@
     "string": "Previous Series"
   },
   "organismSection_TeachingsHeading": {
-    "string": "Teachings"
+    "string": "レッスン"
   },
   "organismSection_TeachingsNext": {
     "string": "Next Teachings"
