work on passage navigator

--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -2744,5 +2744,8 @@
   },
   "organismSection_TeachingsPrevious": {
     "string": "Previous Teachings"
+  },
+  "bibles__history": {
+    "string": "Verlauf"
   }
 }
