--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -395,6 +395,9 @@
   "bible__title": {
     "string": "Bible"
   },
+  "bibles__history": {
+    "string": "History"
+  },
   "blogDetailPage__moreBlogPosts": {
     "comment": "Blog post detail more blog posts",
     "string": "More Blog Posts"
