--- a/public/lang/fr.json
+++ b/public/lang/fr.json
@@ -310,14 +310,6 @@
     "comment": "home page recent posts section title",
     "string": "Articles de blog récents"
   },
-  "homePage__soundDoctrineText": {
-    "comment": "home page sound doctrine text",
-    "string": "AudioVerse est une plate-forme qui collecte du contenu audio adventiste de qualité. Soyez mis(e) au défi et inspiré(e) pour grandir dans votre relation avec Jésus au travers des chants, des sermons, des livres audio et des lectures de la Bible."
-  },
-  "homePage__soundDoctrineTitle": {
-    "comment": "home: Sound Doctrine section title",
-    "string": "La saine doctrine"
-  },
   "homePage__supportSectionCTA": {
     "comment": "home page support section cta",
     "string": "Faire un don"
@@ -2127,12 +2119,6 @@
   "helpWidget__buttonLabel": {
     "string": "Help"
   },
-  "homePage__CreateAccountButtonLabel": {
-    "string": "Create an Account"
-  },
-  "homePage__DiscoverAudioButtonLabel": {
-    "string": "Découvrir en audio"
-  },
   "homePage__bannerImageAlt": {
     "comment": "home page banner image alt",
     "string": "Young woman with headphones listening to music and reading a book."
@@ -2744,5 +2730,16 @@
   },
   "organismSection_TeachingsPrevious": {
     "string": "Previous Teachings"
+  },
+  "homePage__newDevotionalButtonLabel": {
+    "string": "Créer un compte"
+  },
+  "homePage__newDevotionalText": {
+    "comment": "home page new devotional text",
+    "string": "Begin each day with uplifting daily audio devotionals. Strengthen your faith, deepen your connection with God, and focus your heart as you start the year with inspiring messages."
+  },
+  "homePage__newDevotionalTitle": {
+    "comment": "home: New Devotional section title",
+    "string": "New Devotional"
   }
 }
