--- a/public/lang/ja.json
+++ b/public/lang/ja.json
@@ -310,14 +310,6 @@
     "comment": "home page recent posts section title",
     "string": "最近のブログ投稿"
   },
-  "homePage__soundDoctrineText": {
-    "comment": "home page sound doctrine text",
-    "string": "AudioVerseはセブンスデー アドベンチストのとっておきのオーディオコンテンツを提供するサイトです。歌、説教、オーディオブックス、聖書の朗読を通して、イエスとの関係を深めるために挑戦され、刺激を受けてください。"
-  },
-  "homePage__soundDoctrineTitle": {
-    "comment": "home: Sound Doctrine section title",
-    "string": "確実な教理"
-  },
   "homePage__supportSectionCTA": {
     "comment": "home page support section cta",
     "string": "支援をする"
@@ -2127,12 +2119,6 @@
   "helpWidget__buttonLabel": {
     "string": "Help"
   },
-  "homePage__CreateAccountButtonLabel": {
-    "string": "Create an Account"
-  },
-  "homePage__DiscoverAudioButtonLabel": {
-    "string": "ディスカバー オーディオ"
-  },
   "homePage__bannerImageAlt": {
     "comment": "home page banner image alt",
     "string": "Young woman with headphones listening to music and reading a book."
@@ -2744,5 +2730,16 @@
   },
   "organismSection_TeachingsPrevious": {
     "string": "Previous Teachings"
+  },
+  "homePage__newDevotionalButtonLabel": {
+    "string": "アカウントを作成"
+  },
+  "homePage__newDevotionalText": {
+    "comment": "home page new devotional text",
+    "string": "Begin each day with uplifting daily audio devotionals. Strengthen your faith, deepen your connection with God, and focus your heart as you start the year with inspiring messages."
+  },
+  "homePage__newDevotionalTitle": {
+    "comment": "home: New Devotional section title",
+    "string": "New Devotional"
   }
 }
