--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -1829,6 +1829,9 @@
     "comment": "recording previous button label",
     "string": "Previous"
   },
+  "organism-recording__collectionInfoTitle": {
+    "string": "Parent Bible"
+  },
   "organism-recording__conferenceInfoTitle": {
     "comment": "Recording conference info title",
     "string": "Parent Conference"
