--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -1576,6 +1576,9 @@
   "miniplayer__volume": {
     "string": "Volume"
   },
+  "molecule-bibleVersionTophat__disabledTooltip": {
+    "string": "The displayed chapter is unavailable in this version"
+  },
   "molecule-button-SignUp": {
     "string": "Sign Up with Email"
   },
